--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
+    implementation 'com.github.wseemann:FFmpegMediaMetadataRetriever:1.0.14'
 }
