--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation "androidx.activity:activity:1.1.0"
+    implementation "androidx.activity:activity-ktx:1.2.0-beta01"
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
